# lix

./: .gitignore  Cargo.toml  README.md
benches/: parse_bench.rs
src/: cli.rs  discover.rs  error.rs  lib.rs  main.rs  report.rs  writer.rs
src/cleaner/: helpers.rs  mod.rs  patterns.rs  report.rs  tests.rs
src/commands/: clean.rs  convert.rs  extract.rs  find.rs  generate.rs  info.rs  mod.rs  studio.rs  verify.rs
src/models/: message.rs  metadata.rs  mod.rs  tests.rs  training.rs  types.rs
src/parser/: mod.rs  tests.rs
src/pipeline/: aggregate.rs  dedup.rs  mod.rs  process.rs
src/providers/: claude.rs  claude_context.rs  claude_helpers.rs  claude_metadata.rs  claude_normalize.rs  claude_transcript.rs  codex.rs  codex_event.rs  codex_reorder.rs  cursor.rs  droid.rs  hermes.rs  hermes_meta.rs  hermes_time.rs  mod.rs  pi.rs  pi_helpers.rs  shared.rs  to_example.rs
src/sqlite/: cursor.rs  hermes.rs  mod.rs
src/tools/: builtins_codex.rs  builtins_cursor.rs  builtins_droid.rs  builtins_hermes.rs  builtins_pi.rs  mod.rs
tests/: integration_clean.rs  integration_extract.rs  integration_pipeline.rs  integration_providers.rs
tests/common/: mod.rs
tests/fixtures/: claude_incomplete.jsonl  claude_minimal.jsonl  claude_synthetic_limit.jsonl  claude_synthetic_only.jsonl  claude_toolcall.jsonl  codex_minimal.jsonl  droid_minimal.jsonl  hermes_minimal.jsonl  pi_minimal.jsonl
tests/goldens/: claude_incomplete.jsonl  claude_minimal.jsonl  claude_synthetic_limit.jsonl  claude_synthetic_only.jsonl  claude_toolcall.jsonl  codex_minimal.jsonl  cursor_minimal.jsonl  (+11 more)
