[package]
name = "lix"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"

[[bin]]
name = "lix"
path = "src/main.rs"

[lib]
name = "lix"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
regex = "1.10"
walkdir = "2.5"
ignore = "0.4"
blake3 = "1.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[[bench]]
name = "parse_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.39"
pretty_assertions = "1.4"
tempfile = "3.10"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
